--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ bld/
 [Oo]bj/
 [Ll]og/
 
+
 # Visual Studio 2015 cache/options directory
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
@@ -251,3 +252,13 @@ paket-files/
 # JetBrains Rider
 .idea/
 *.sln.iml
+
+Gygax/Method/
+
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Makefile
+cmake_install.cmake
+install_manifest.txt
+CTestTestfile.cmake
