--- a/GygaxCore/packages.config
+++ b/GygaxCore/packages.config
@@ -5,14 +5,17 @@
   <package id="Accord.MachineLearning" version="3.0.2" targetFramework="net452" />
   <package id="Accord.Math" version="3.0.2" targetFramework="net452" />
   <package id="Accord.Statistics" version="3.0.2" targetFramework="net452" />
-  <package id="Cyotek.Drawing.BitmapFont" version="1.0.2.0" targetFramework="net452" />
+  <package id="Cyotek.Drawing.BitmapFont" version="1.3.1" targetFramework="net452" />
   <package id="DirectShowLib" version="1.0.0" targetFramework="net452" />
-  <package id="EmguCV" version="3.0.0" targetFramework="net452" />
-  <package id="HelixToolkit" version="2015.1.686" targetFramework="net452" />
-  <package id="HelixToolkit.Wpf" version="2015.1.686" targetFramework="net452" />
-  <package id="HelixToolkit.Wpf.SharpDX" version="2015.1.686" targetFramework="net452" />
-  <package id="MathNet.Numerics" version="3.11.0" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net452" />
+  <package id="EmguCV" version="3.1.0.1" targetFramework="net452" />
+  <package id="ExifLib" version="1.7.0.0" targetFramework="net452" />
+  <package id="HelixToolkit" version="2015.1.715" targetFramework="net452" />
+  <package id="HelixToolkit.Wpf" version="2015.1.715" targetFramework="net452" />
+  <package id="HelixToolkit.Wpf.SharpDX" version="2015.1.715" targetFramework="net452" />
+  <package id="MathNet.Numerics" version="3.12.0" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
+  <package id="OpenTK" version="1.1.2349.61993" targetFramework="net452" />
+  <package id="OpenTK.GLControl" version="1.1.2349.61993" targetFramework="net452" />
   <package id="SharpDX" version="2.6.3" targetFramework="net452" />
   <package id="SharpDX.D3DCompiler" version="2.6.3" targetFramework="net452" />
   <package id="SharpDX.Direct2D1" version="2.6.3" targetFramework="net452" />
@@ -22,4 +25,5 @@
   <package id="SharpDX.DXGI" version="2.6.3" targetFramework="net452" />
   <package id="SharpDX.Toolkit" version="2.6.3" targetFramework="net452" />
   <package id="SharpDX.Toolkit.Graphics" version="2.6.3" targetFramework="net452" />
+  <package id="ZedGraph" version="5.1.7" targetFramework="net452" />
 </packages>
