--- a/PclWrapper/ALL_BUILD.vcxproj.filters
+++ b/PclWrapper/ALL_BUILD.vcxproj.filters
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <Project ToolsVersion="14.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <CustomBuild Include="C:\Users\Philipp\Dropbox\CIT\Gygax\PclWrapper\PclWrapper\cmakelists.txt" />
+    <CustomBuild Include="C:\Users\Philipp\Documents\Visual Studio 2015\Projects\Gygax\PclWrapper\PclWrapper\cmakelists.txt" />
   </ItemGroup>
   <ItemGroup>
   </ItemGroup>
