--- a/PclWrapper/PclWrapper.vcxproj.filters
+++ b/PclWrapper/PclWrapper.vcxproj.filters
@@ -1,24 +1,24 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <Project ToolsVersion="14.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="C:\Users\Philipp\Dropbox\CIT\Gygax\PclWrapper\PclWrapper\PclWrapper.cpp">
+    <ClCompile Include="C:\Users\Philipp\Documents\Visual Studio 2015\Projects\Gygax\PclWrapper\PclWrapper\PclWrapper.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="C:\Users\Philipp\Dropbox\CIT\Gygax\PclWrapper\PclWrapper\PclWrapper.h">
+    <ClInclude Include="C:\Users\Philipp\Documents\Visual Studio 2015\Projects\Gygax\PclWrapper\PclWrapper\PclWrapper.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <CustomBuild Include="C:\Users\Philipp\Dropbox\CIT\Gygax\PclWrapper\PclWrapper\cmakelists.txt" />
+    <CustomBuild Include="C:\Users\Philipp\Documents\Visual Studio 2015\Projects\Gygax\PclWrapper\PclWrapper\cmakelists.txt" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Source Files">
-      <UniqueIdentifier>{0D7FB535-62DA-3753-8A53-A89E1505FD69}</UniqueIdentifier>
+      <UniqueIdentifier>{F1B3F7B7-4898-32CC-9F2C-406F53E4210F}</UniqueIdentifier>
     </Filter>
     <Filter Include="Header Files">
-      <UniqueIdentifier>{00D15712-A5DA-3334-A650-FAECA440EC33}</UniqueIdentifier>
+      <UniqueIdentifier>{C46E64B4-1B7F-3345-9610-D17A726C4D07}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
