--- a/Gygax/packages.config
+++ b/Gygax/packages.config
@@ -7,6 +7,7 @@
   <package id="Accord.Statistics" version="3.0.2" targetFramework="net452" />
   <package id="Cyotek.Drawing.BitmapFont" version="1.3.1" targetFramework="net452" />
   <package id="EmguCV" version="3.1.0.1" targetFramework="net452" />
+  <package id="Extended.Wpf.Toolkit" version="2.9" targetFramework="net452" />
   <package id="HelixToolkit" version="2015.1.715" targetFramework="net452" />
   <package id="HelixToolkit.Wpf" version="2015.1.715" targetFramework="net452" />
   <package id="HelixToolkit.Wpf.SharpDX" version="2015.1.715" targetFramework="net452" />
