Cleanup, added Gygax video recording, added hide in context menu

--- a/GygaxCore/GygaxCore.csproj
+++ b/GygaxCore/GygaxCore.csproj
@@ -164,6 +164,7 @@
     <Compile Include="DataStructures\CameraPosition.cs" />
     <Compile Include="DataStructures\GygaxVideo.cs" />
     <Compile Include="Devices\NetworkCamera.cs" />
+    <Compile Include="Processors\GygaxVideoWriter.cs" />
     <Compile Include="Processors\MyMethod.cs" />
     <Compile Include="Processors\Threshold.cs" />
     <Compile Include="Processors\EdgeDetector.cs" />
