--- a/GygaxCore/GygaxCore.csproj
+++ b/GygaxCore/GygaxCore.csproj
@@ -195,9 +195,21 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="Ifc\IFC2X3_TC1.exp">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Ifc\IFC4.exp">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Ifc\IFC2X3-Settings.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Ifc\IFC4-Settings.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Ifc\ifcengine.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
