--- a/GygaxVisu/GygaxVisu.csproj
+++ b/GygaxVisu/GygaxVisu.csproj
@@ -216,15 +216,6 @@
     <Compile Include="Helpers\PrimitiveBuilder.cs" />
     <Compile Include="Helpers\ViewModel.cs" />
     <Compile Include="Helpers\ViewportHelper.cs" />
-    <Compile Include="Method\Animation.cs" />
-    <Compile Include="Method\Methods.cs" />
-    <Compile Include="Method\MyProcessor.cs" />
-    <Compile Include="Method\MyProcessor2.cs" />
-    <Compile Include="Method\ObjHandler.cs" />
-    <Compile Include="Method\PlaneReconstructor.cs" />
-    <Compile Include="Method\ScannerOverlay.cs" />
-    <Compile Include="Method\Triangle.cs" />
-    <Compile Include="Method\UvMapper.cs" />
     <Compile Include="Visualizer\IfcVisualizer.cs" />
     <Compile Include="Visualizer\CoordinateSystemVisualizer.cs" />
     <Compile Include="Visualizer\PointcloudVisualizer.cs" />
@@ -332,7 +323,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Method\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
